<?xml version="1.0"?>
<package format="2">
  <name>ros-gtest</name>
  <version>0.0.0</version>
  <description>
    The ros-gtest package is a demonstration of using google unit test and rostest package.
  </description>

  <author email="jianle001@e.ntu.edu.sg">Bruce Chan Jian Le</author>
  <maintainer email="jianle001@e.ntu.edu.sg">Bruce Chan Jian Le</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/BruceChanJianLe/ros-gtest</url>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gtest</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rostest</build_depend>

  <build_export_depend>gtest</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rostest</build_export_depend>

  <exec_depend>gtest</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rostest</exec_depend>


  <export>
  </export>
</package>
